bunch of changes, hope this doesn't break stuff

--- a/Common.cfg
+++ b/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPrefferedNeighbors 2
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
-FileName TheFile.dat
-FileSize 10000232
+FileName popular-movie-not-virus.exe
+FileSize 4194305
 PieceSize 32768
